# image-processor

./: CMakeLists.txt  README.md  image.cpp  image.h  image_processor.cpp  parser.cpp  parser.h
filters/: a_filter.h  a_matrix_filter.cpp  a_matrix_filter.h  crop.cpp  crop.h  edge.cpp  edge.h  grayscale.cpp  grayscale.h  negative.cpp  negative.h  sharpen.cpp  sharpen.h
